--- a/css/footer.css
+++ b/css/footer.css
@@ -2,15 +2,70 @@ footer{
     display: flex;
     justify-content: space-around;
 
-    z-index: -1;
-
     transition: 0.5s cubic-bezier(.16,.77,.9,.88);
+
+    margin-top: 5px;
+    border-top: 2px solid var(--complementary-color);
+    padding-top: 5px;
+
+    margin-bottom: 2rem;
 }
 footer section{
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-evenly;
 }
 footer h1{
     margin-bottom: 10px;
+    color: var(--complementary-color);
+    border-bottom: 2px solid var(--complementary-color);
+}
+footer p {
+    position: relative;
+
+    color: var(--text-color)
+}
+footer p::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 100%;
+    transform: translateX(-100%);
+
+    width: 4px;
+    border-radius: 1rem;
+    height: 100%;
+    background-color: var(--text-color);
+}
+
+footer a {
+    position: relative;
+
+    text-decoration: none;
+    color: var(--text-color);
+
+    transition: 200ms;
+}
+footer a::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 100%;
+    transform: translateX(-300%);
+
+    width: 4px;
+    border-radius: 1rem;
+    height: 100%;
+    background-color: var(--complementary-color);
+    opacity: 0;
+
+    transition: 350ms;
+}
+footer a:hover {
+    color: var(--complementary-color);
+}
+footer a:hover::before {
+    transform: translateX(-150%);
+    opacity: 1;
 }
