--- a/sass/responsive-sub-left-menu.css
+++ b/sass/responsive-sub-left-menu.css
@@ -115,7 +115,7 @@ nav.sub-left-menu ul li a:hover::after {
     width: 30vw;
     -webkit-transform: translateX(-100%);
             transform: translateX(-100%);
-    opacity: 0.2;
+    opacity: 1;
   }
   nav.sub-left-menu > button {
     position: absolute;
@@ -125,17 +125,18 @@ nav.sub-left-menu ul li a:hover::after {
             transform: translateX(100%);
     width: 4rem;
     height: 4rem;
-    background: url("../img/closed-sub-left-menu-white.png") no-repeat;
-    background-size: 75%;
+    background: url("../img/closed-sub-left-menu-white-filled.png") no-repeat;
+    background-size: 100%;
     background-position: center;
-    border: none;
+    -webkit-box-shadow: 5px 0 10px var(--secondary-color);
+            box-shadow: 5px 0 10px var(--secondary-color);
     cursor: pointer;
   }
 
   nav.sub-left-menu-on {
     -webkit-transform: translateX(0);
             transform: translateX(0);
-    opacity: 0.5;
+    opacity: 0.6;
   }
   nav.sub-left-menu-on h1, nav.sub-left-menu-on ul {
     opacity: 1;
@@ -143,8 +144,10 @@ nav.sub-left-menu ul li a:hover::after {
 
   nav.sub-left-menu-on + section.content,
 nav.sub-left-menu-on + section.content + footer {
-    -webkit-transform: skewY(-25deg) translateX(30vw);
-            transform: skewY(-25deg) translateX(30vw);
+    position: relative;
+    left: 30vw;
+    -webkit-transform: scale(0.8);
+            transform: scale(0.8);
   }
 }
 @-webkit-keyframes bouncy-bar {
