--- a/sass/responsive.css
+++ b/sass/responsive.css
@@ -17,12 +17,29 @@
     transition: transform 0.5s cubic-bezier(0.16, 0.77, 0.9, 0.88), -webkit-transform 0.5s cubic-bezier(0.16, 0.77, 0.9, 0.88);
   }
 }
+@media (min-width: 640px) and (max-width: 1550px) {
+  footer {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
 @media (max-width: 640px) {
   footer {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+  }
+
+  main::before {
+    position: sticky;
+    top: 0;
+    content: "";
+    display: block;
+    width: 100vw;
+    height: 8rem;
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(30%, var(--secondary-color)), to(transparent));
+    background: linear-gradient(var(--secondary-color) 30%, transparent);
   }
 }
 /*# sourceMappingURL=responsive.css.map */
