--- a/css/formulaire.css
+++ b/css/formulaire.css
@@ -15,6 +15,13 @@ form>fieldset{
     display: flex;
     flex-direction: column;
 }
+p{
+    margin-bottom: 10px;
+}
 .bouton{
     margin-bottom: 25px;
+}
+input[type="submit"],input[type="reset"]{
+    width: 100px;
+    height: 25px;
 }
