--- a/css/formulaire.css
+++ b/css/formulaire.css
@@ -24,4 +24,8 @@ p{
 input[type="submit"],input[type="reset"]{
     width: 100px;
     height: 25px;
+    border:0 none;
+    cursor:pointer;
+    -webkit-border-radius: 5px;
+    border-radius: 5px; 
 }
