--- a/css/contenu1.css
+++ b/css/contenu1.css
@@ -1,8 +1,23 @@
-.part{
-    height: 30vw;
-}
-
 section.content h1 {
     text-align: center;
     margin: 1rem;
+}
+
+section.content h2 {
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+}
+
+section.content p {
+    text-align: justify;
+}
+
+
+section.content ul {
+    margin: auto;
+}
+
+section.content ul li {
+    margin-left: 20px;
+    list-style-type:  disclosure-closed;
 }
