--- a/sass/responsive-sub-left-menu.scss
+++ b/sass/responsive-sub-left-menu.scss
@@ -12,6 +12,7 @@ nav.sub-left-menu {
     background: var(--text-color);
 
     transition: 0.5s cubic-bezier(.16,.77,.9,.88);
+    transform-origin: center right;
     transition-property: transform border-radius, opacity;
 
     display: flex;
@@ -100,7 +101,7 @@ nav.sub-left-menu {
 
         &:hover {
             transform: translate(0);
-            opacity: 0.4;
+            opacity: 0.7;
             border-radius: 0 4% 4% 0;
 
             & h1, ul {
@@ -117,6 +118,7 @@ nav.sub-left-menu {
         // Agrandir la taille
         width: 30vw;
 
+        transform-origin: center right;
         // Ne plus laisser dépasser le sub-menu
         transform: translateX(-100%);
 
@@ -140,10 +142,16 @@ nav.sub-left-menu {
         }
     }
 
+    nav.sub-left-menu + section.content,
+    nav.sub-left-menu + section.content + footer {
+        transform-origin: center right;
+    }
+
     nav.sub-left-menu-on {
+        transform-origin: center right;
         transform: translateX(0);
 
-        opacity: 0.6;
+        opacity: 0.7;
 
         & h1, ul {
             opacity: 1;
@@ -152,9 +160,7 @@ nav.sub-left-menu {
 
     nav.sub-left-menu-on + section.content,
     nav.sub-left-menu-on + section.content + footer {
-        position: relative;
-        left: 30vw;
-        transform: scale(0.8);
+        transform: translateX(2vw) scaleX(0.7);
     }
 }
 
